--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -12,7 +12,8 @@
     "- Gabriel Fonseca (2111066)\n",
     "- Yasmim Santos (2116925)\n",
     "- Gustavo Santos (2110999)\n",
-    "- Pedro Lucas (2111131)"
+    "- Pedro Lucas (2111131)\n",
+    "- Samuel Zaire (2110997)"
    ]
   },
   {
